<resources>
    <string name="app_name">DraftFragments</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="image_description">image</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="stats">Stats</string>
    <string name="statistics">Statistics</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="flashcards">Flashcards</string>

    <!-- google play services -->
    <string name="show_leaderboards">Show Leaderboards</string>
    <string name="sign_in_why">Sign in with Google to share your scores and achievements with your friends.</string>
    <string name="you_are_signed_in">You are signed in with Google.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_to_upload_this_score">Sign in now to upload this score, save your achievements and share your
        progress with friends.
    </string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Capitals quiz: Settings</string>

    <!-- Strings For Number of questions Preference [CHAR LIMIT=30] -->
    <string name="settings_number_of_questions">Number of questions</string>
    <string name="settings_number_of_questions_by_key" translatable="false">number_of_questions</string>
    <string name="settings_number_of_questions_default" translatable="false">@string/settings_10_questions_value</string>
    <!-- Label for number of questions [CHAR LIMIT=20] -->
    <string name="settings_10_questions" translatable="false">10</string>
    <string name="settings_10_questions_value" translatable="false">10</string>
    <string name="settings_20_questions" translatable="false">20</string>
    <string name="settings_20_questions_value" translatable="false">20</string>
    <string name="settings_30_questions" translatable="false">30</string>
    <string name="settings_30_questions_value" translatable="false">30</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
