<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
            app:key="notifications"
            app:title="Enable message notifications"/>

    <Preference
            app:key="feedback"
            app:title="Send feedback"
            app:summary="Report technical issues or suggest new features"/>

    <ListPreference
            app:defaultValue="@string/settings_number_of_questions_default"
            app:entries="@array/settings_number_of_question"
            app:entryValues="@array/settings_order_by_values"
            app:key="@string/settings_number_of_questions_by_key"
            app:title="@string/settings_number_of_questions" />

</androidx.preference.PreferenceScreen>