<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/play_dest"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/play"/>
        <item
                android:id="@+id/stats_dest"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/stats"/>

    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                    android:id="@+id/settings_dest"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/settings"/>
        </menu>
    </item>

</menu>
